--- a/drugbank/readme
+++ b/drugbank/readme
@@ -1,1 +1,1 @@
-Here will be all tsv file of the extracted drugbank xml file.
+Here will be all tsv file of the extracted drugbank xml file. [https://www.drugbank.ca/downloads]
